--- a/docs/metrics/report/css/normalize.css
+++ b/docs/metrics/report/css/normalize.css
@@ -223,7 +223,7 @@ pre {
 }
 
 /**
- * Address odd `em`-unit font size rendering in all browsers.
+ * Address odd `em`-Unit font size rendering in all browsers.
  */
 
 code,
